--- a/Index.html
+++ b/Index.html
@@ -2,25 +2,24 @@
 <Hwitml>   
 <Head>    
 <Title>  
-Make a Navigation Bar
+Home
 </Title>
 <link rel="stylesheet" href="kbbq info.css">
 
 </Head>
 <Body id="index-body">
-<header>
-<nav class="nav-bar">
-<div class="dropdown">
-<button class="dropbtn">Menu</button>
-<div class="dropdown-content">
-    <a href="Menu.html">Chefs Pick</a>
-    <a href="Menu.html">Specials</a>
-    <a href="Menu.html">Appetisers</a>
-    <a href="Menu.html">Main</a>
-    <a href="Menu.html">Desserts</a>
-</div>   
-
-</div>
+    <header>
+        <nav class="nav-bar">
+            <div class="dropdown">
+                <button class="dropbtn">Menu</button>
+                <div class="dropdown-content">
+                    <a href="Menu.html">Chefs Pick</a>
+                    <a href="Menu.html">Specials</a>
+                    <a href="Menu.html">Appetisers</a>
+                    <a href="Menu.html">Main</a>
+                    <a href="Menu.html">Desserts</a>
+                </div>   
+            </div>
     <a href="Reservations.html">Reservations</a>
     <a href="About Us.html">About Us</a>
     <a href="Gallery.html">Gallery</a>
@@ -37,7 +36,6 @@ Make a Navigation Bar
 Nothing here yet
 <footer class="footer">
     text text text
-
 </footer>
 </body>
 </Html>
