--- a/Index.html
+++ b/Index.html
@@ -2,24 +2,25 @@
 <Hwitml>   
 <Head>    
 <Title>  
-Home
+Make a Navigation Bar
 </Title>
 <link rel="stylesheet" href="kbbq info.css">
 
 </Head>
 <Body id="index-body">
-    <header>
-        <nav class="nav-bar">
-            <div class="dropdown">
-                <button class="dropbtn">Menu</button>
-                <div class="dropdown-content">
-                    <a href="Menu.html">Chefs Pick</a>
-                    <a href="Menu.html">Specials</a>
-                    <a href="Menu.html">Appetisers</a>
-                    <a href="Menu.html">Main</a>
-                    <a href="Menu.html">Desserts</a>
-                </div>   
-            </div>
+<header>
+<nav class="nav-bar">
+<div class="dropdown">
+<button class="dropbtn">Menu</button>
+<div class="dropdown-content">
+    <a href="Menu.html">Chefs Pick</a>
+    <a href="Menu.html">Specials</a>
+    <a href="Menu.html">Appetisers</a>
+    <a href="Menu.html">Main</a>
+    <a href="Menu.html">Desserts</a>
+</div>   
+
+</div>
     <a href="Reservations.html">Reservations</a>
     <a href="About Us.html">About Us</a>
     <a href="Gallery.html">Gallery</a>
@@ -36,6 +37,7 @@ Home
 Nothing here yet
 <footer class="footer">
     text text text
+
 </footer>
 </body>
 </Html>
