--- a/About Us.html
+++ b/About Us.html
@@ -1,46 +1,46 @@
-<head><link rel="stylesheet" href="kbbq info.css"></head>
-<body class="Aboutus_bkg">
-    
-</body>
-<header>
-  <nav class="nav-bar">
-  <div class="dropdown">
-  <button class="dropbtn">Menu</button>
-  <div class="dropdown-content">
-      <a href="Menu.html">Chefs Pick</a>
-      <a href="Menu.html">Specials</a>
-      <a href="Menu.html">Appetisers</a>
-      <a href="Menu.html">Main</a>
-      <a href="Menu.html">Desserts</a>
-  </div>   
-  
-  </div>
-      <a href="Reservations.html">Reservations</a>
-      <a href="About Us.html">About Us</a>
-      <a href="Gallery.html">Gallery</a>
-      <a href="#"> Join Us </a>  
-  </nav>
-  </header>
-<div class="about-section">
-    <h1>About Us Page</h1>
-    <p>Some text about who we are and what we do.</p>
-    <p>Resize the browser window to see that this page is responsive by the way.</p>
-  </div>
-  
-  <h2 style="text-align:center">Our Team</h2>
-  <div class="row">
-    <div class="column">
-      <div class="card">
-        <img src="Images/al_pacino.png" alt="Jane" style="width:100%">
-        <div class="container">
-          <h2>Al Pachino</h2>
-          <p class="title">CEO & Founder</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>jane@example.com</p>
-          <p><button class="button">Contact</button></p>
+<!Doctype html>
+<html lang>
+  <head>
+    <link rel="stylesheet" href="kbbq info.css">
+  </head>
+  <body class="Aboutus_bkg">
+    <header>
+      <nav class="nav-bar">
+        <div class="dropdown">
+          <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+              <a href="Menu.html">Chefs Pick</a>
+              <a href="Menu.html">Specials</a>
+              <a href="Menu.html">Appetisers</a>
+              <a href="Menu.html">Main</a>
+              <a href="Menu.html">Desserts</a>
+            </div>   
+        </div>
+        <a href="Reservations.html">Reservations</a>
+        <a href="About Us.html">About Us</a>
+        <a href="Gallery.html">Gallery</a>
+        <a href="#"> Join Us </a>  
+      </nav>
+    </header>
+    <div class="about-section">
+        <h1>About Us Page</h1>
+        <p>Some text about who we are and what we do.</p>
+        <p>Resize the browser window to see that this page is responsive by the way.</p>
+    </div>
+    <h2 style="text-align:center">Our Team</h2>
+    <div class="row">
+      <div class="column">
+        <div class="card">
+          <img src="Images/al_pacino.png" alt="Jane" style="width:100%">
+          <div class="container">
+            <h2>Al Pachino</h2>
+            <p class="title">CEO & Founder</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>jane@example.com</p>
+            <p><button class="button">Contact</button></p>
+          </div>
         </div>
       </div>
-    </div>
   
     <div class="column">
       <div class="card">
@@ -68,3 +68,5 @@
       </div>
     </div>
   </div>
+  </body>
+</html>
